--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         }
 
         .time {
-          min-width: 80px;
+          min-width: 100px;
           font-size: 14px;
         }
       }
@@ -318,9 +318,9 @@
             <div class="time">11:30-13:00</div>
             <div class="activity">
               <div class="activity-name">
-                市區午餐<span class="badge badge-meal">用餐</span>
+                午餐時間<span class="badge badge-meal">用餐</span>
               </div>
-              <div class="activity-note">推薦：古謝そば屋或海鮮料理</div>
+              <div class="activity-note">宮古島harry's Shrimp Truck - 必吃人氣蝦蝦飯</div>
             </div>
           </div>
 
@@ -328,31 +328,20 @@
             <div class="time">13:00-14:00</div>
             <div class="activity">
               <div class="activity-name">
-                雪鹽製鹽所<span class="badge badge-shopping">購物</span>
-              </div>
-              <div class="activity-note">
-                參觀製程、品嚐雪鹽冰淇淋、購買伴手禮
-              </div>
-            </div>
-          </div>
-
-          <div class="time-slot">
-            <div class="time">14:00-15:00</div>
-            <div class="activity">
-              <div class="activity-name">
                 宮古島海中公園<span class="badge badge-culture">觀光</span>
               </div>
               <div class="activity-note">
                 海底觀察館，涼爽舒適，慢慢欣賞海底世界
+                <p>成人門票：&yen;1000 </p>
               </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">15:00-16:30</div>
+            <div class="time">14:00-15:30</div>
             <div class="activity">
               <div class="activity-name">
-                島の駅みやこ<span class="badge badge-shopping">購物</span>
+                島の駅みやこ / Blue Seal冰淇淋<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
                 物產中心，選購特產，有休息區可喝茶
@@ -361,7 +350,7 @@
           </div>
 
           <div class="time-slot">
-            <div class="time">16:30-17:00</div>
+            <div class="time">15:30-16:30</div>
             <div class="activity">
               <div class="activity-name">返回港口(平良港)</div>
               <div class="activity-note">預留充足時間登船（包車7小時結束）</div>
@@ -370,7 +359,7 @@
 
           <div class="stats">
             <div class="stat-item">
-              <div class="stat-value">4</div>
+              <div class="stat-value">3</div>
               <div class="stat-label">主要景點</div>
             </div>
             <div class="stat-item">
