modify date display

--- a/index.html
+++ b/index.html
@@ -253,13 +253,13 @@
 
       <div class="tabs">
         <button class="tab-button active" onclick="showTab('day1', this)">
-          1/18 宮古島
+          1/18 (日) 宮古島
         </button>
         <button class="tab-button" onclick="showTab('day2', this)">
-          1/19 沖繩本島
+          1/19 (一) 沖繩本島
         </button>
         <button class="tab-button" onclick="showTab('day3', this)">
-          1/20 石垣島
+          1/20 (二) 石垣島
         </button>
         <button class="tab-button" onclick="showTab('notes', this)">
           注意事項
@@ -268,7 +268,7 @@
 
       <div id="day1" class="tab-content active">
         <div class="schedule-card">
-          <h2>🖐️ 1/18 (六) 宮古島</h2>
+          <h2>🖐️ 1/18 (日) 宮古島</h2>
           <p style="color: #666; margin: 10px 0">船隻：08:00抵達 | 18:00啟航</p>
           <p
             style="
@@ -376,7 +376,7 @@
 
       <div id="day2" class="tab-content">
         <div class="schedule-card">
-          <h2>🏰 1/19 (日) 沖繩本島</h2>
+          <h2>🏰 1/19 (一) 沖繩本島</h2>
           <p style="color: #666; margin: 10px 0">船隻：07:00抵達 | 19:00啟航</p>
           <p
             style="
@@ -488,7 +488,7 @@
 
       <div id="day3" class="tab-content">
         <div class="schedule-card">
-          <h2>🌺 1/20 (一) 石垣島</h2>
+          <h2>🌺 1/20 (二) 石垣島</h2>
           <p style="color: #666; margin: 10px 0">船隻：09:00抵達 | 19:00啟航</p>
           <p
             style="
