--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
             <div class="time">11:00-11:30</div>
             <div class="activity">
               <div class="activity-name">港口(石垣新港)出發</div>
-              <div class="activity-note">前往川平灣</div>
+              <div class="activity-note">前往川平灣，車程約30分鐘</div>
             </div>
           </div>
 
@@ -524,10 +524,10 @@
             <div class="time">11:30-13:00</div>
             <div class="activity">
               <div class="activity-name">
-                川平灣<span class="badge badge-nature">自然</span>
+                川平灣玻璃船體驗<span class="badge badge-nature">自然</span>
               </div>
               <div class="activity-note">
-                米其林三星景點，可選玻璃船或岸邊賞景
+                米其林三星景點，搭乘玻璃船欣賞海底珊瑚礁與熱帶魚群（玻璃船票 15人 x &yen;1,200 = &yen;18,000）
               </div>
             </div>
           </div>
@@ -536,17 +536,23 @@
             <div class="time">13:00-14:30</div>
             <div class="activity">
               <div class="activity-name">
-                川平灣午餐<span class="badge badge-meal">用餐</span>
+                川平灣午餐 - 石垣牛燒肉<span class="badge badge-meal">用餐</span>
               </div>
-              <div class="activity-note">必嚐石垣牛料理，餐後可休息</div>
+              <div class="activity-note">
+                <strong>推薦餐廳選擇：</strong><br>
+                1. <strong>石垣屋</strong> (11:30-14:00) - 必嚐招牌特選牛肉握壽司、自家牧場直營<br>
+                2. <strong>燒肉專家 いしなぎ屋</strong> (11:30-15:30) - 牧場直營、午餐套餐CP值高<br>
+                3. <strong>石垣島北內牧場</strong> (11:30-14:30) - 整頭購買提供稀少部位<br>
+                預算：午餐約¥2,000-3,500/人
+              </div>
             </div>
           </div>
 
           <div class="time-slot">
             <div class="time">14:30-15:00</div>
             <div class="activity">
-              <div class="activity-name">前往市區</div>
-              <div class="activity-note">車程約30分鐘</div>
+              <div class="activity-name">前往八重山民俗村</div>
+              <div class="activity-note">車程約10分鐘，順路返回市區</div>
             </div>
           </div>
 
@@ -554,9 +560,11 @@
             <div class="time">15:00-16:00</div>
             <div class="activity">
               <div class="activity-name">
-                桃林寺+市區散策<span class="badge badge-culture">文化</span>
+                石垣八重山民俗村<span class="badge badge-culture">文化</span>
               </div>
-              <div class="activity-note">輕鬆參拜，附近街道漫步</div>
+              <div class="activity-note">
+                百年古民家、松鼠猴園、傳統文化體驗（門票 15人 x &yen;1,000 = &yen;15,000）
+              </div>
             </div>
           </div>
 
@@ -566,7 +574,7 @@
               <div class="activity-name">
                 EUGLENA MALL<span class="badge badge-shopping">購物</span>
               </div>
-              <div class="activity-note">最後購物機會，有冷氣座椅</div>
+              <div class="activity-note">最後購物機會，有冷氣座椅可休息</div>
             </div>
           </div>
 
@@ -617,14 +625,15 @@
           <ul style="line-height: 2; margin-left: 20px">
             <li><strong>門票費用：</strong></li>
             <li style="margin-left: 30px">- 玉泉洞王國村：2,000円</li>
-            <li style="margin-left: 30px">- 川平灣玻璃船：1,200円(選擇性)</li>
+            <li style="margin-left: 30px">- 川平灣玻璃船：1,200円</li>
+            <li style="margin-left: 30px">- 八重山民俗村：1,000円</li>
             <li style="margin-left: 30px">- 其他景點：多數免費</li>
             <li><strong>餐費預算：</strong></li>
             <li style="margin-left: 30px">- 午餐：1,500-2,500円/餐</li>
             <li style="margin-left: 30px">- 飲料點心：500-1,000円/天</li>
             <li><strong>購物伴手禮：</strong>5,000-10,000円(依個人需求)</li>
             <li>
-              <strong>建議總預算：</strong>18,000-25,000円(約台幣5,400-7,500元)
+              <strong>建議總預算：</strong>20,000-27,000円(約台幣6,000-8,100元)
             </li>
           </ul>
 
@@ -632,12 +641,52 @@
           <ul style="line-height: 2; margin-left: 20px">
             <li><strong>天氣因素：</strong></li>
             <li style="margin-left: 30px">- 雨天：玉泉洞為室內景點不受影響</li>
-            <li style="margin-left: 30px">- 川平灣雨天改為石垣市區購物</li>
+            <li style="margin-left: 30px">- 川平灣雨天改為石垣市區購物或石垣島鐘乳洞</li>
             <li style="margin-left: 30px">- 瀨長島可改為ASHIBINAA Outlet</li>
             <li><strong>時間調整：</strong></li>
             <li style="margin-left: 30px">- 可依團員體力縮短購物時間</li>
             <li style="margin-left: 30px">- 景點停留時間可彈性調整</li>
             <li style="margin-left: 30px">- 確保17:30前返回港口</li>
+          </ul>
+
+          <h3 style="color: #667eea; margin-top: 20px">✨ 石垣島行程更新重點</h3>
+          <ul style="line-height: 2; margin-left: 20px">
+            <li><strong>川平灣玻璃船：</strong>15人確定搭乘玻璃船，欣賞海底世界</li>
+            <li><strong>川平灣午餐 - 石垣牛燒肉推薦：</strong>
+              <ul style="margin-top: 5px">
+                <li style="margin-left: 30px"><strong>石垣屋</strong>（最推薦！）<br>
+                  地址：沖縄県石垣市真栄里547-7<br>
+                  電話：0980-82-4400<br>
+                  營業：11:30-14:00（週二休）<br>
+                  特色：300年吉野杉古民家、自家牧場直營、招牌特選牛肉握壽司</li>
+                <li style="margin-left: 30px"><strong>燒肉專家 いしなぎ屋</strong><br>
+                  地址：沖縄県石垣市大川48<br>
+                  電話：0980-83-9929<br>
+                  營業：11:30-15:30<br>
+                  特色：牧場直營、午餐套餐超值</li>
+                <li style="margin-left: 30px"><strong>石垣島北內牧場 濱崎本店</strong><br>
+                  地址：沖縄県石垣市浜崎町2-3-24<br>
+                  電話：0980-83-7000<br>
+                  營業：11:30-14:30<br>
+                  特色：整頭購買、可品嚐稀少部位</li>
+              </ul>
+            </li>
+            <li><strong>八重山民俗村：</strong>取代桃林寺，位於川平灣回市區順路上
+              <ul style="margin-top: 5px">
+                <li style="margin-left: 30px">- 百年古民家重現石垣島傳統生活</li>
+                <li style="margin-left: 30px">- 可愛松鼠猴園</li>
+                <li style="margin-left: 30px">- 有遮陽處和休息區，適合團體</li>
+              </ul>
+            </li>
+            <li><strong>EUGLENA MALL 說明：</strong>
+              <ul style="margin-top: 5px">
+                <li style="margin-left: 30px">- EUGLENA MALL是石垣島市中心的大型商店街（日本最南端的有頂商店街）</li>
+                <li style="margin-left: 30px">- <strong>石垣市公設市場就在EUGLENA MALL裡面</strong>，是商店街的核心</li>
+                <li style="margin-left: 30px">- 商店街有100多家店鋪：伴手禮店、餐廳、公設市場、特產中心</li>
+                <li style="margin-left: 30px">- 有遮陽棚、冷氣，適合購物休息</li>
+                <li style="margin-left: 30px">- 距離石垣港離島碼頭步行約5分鐘</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
