--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
             <div class="activity">
               <div class="activity-name">港口(平良港)集合出發</div>
               <div class="activity-note">
+                地址：沖繩縣宮古島市平良字下里108-11（平良港）<br>
                 兩台車同時出發，前往與那霸前濱海灘
               </div>
             </div>
@@ -309,6 +310,7 @@
                 與那霸前濱海灘<span class="badge badge-nature">自然</span>
               </div>
               <div class="activity-note">
+                地址：沖繩縣宮古島市下地字與那霸1199<br>
                 東洋第一美海灘，輕鬆散步或涼亭休息
               </div>
             </div>
@@ -318,9 +320,11 @@
             <div class="time">11:30-13:00</div>
             <div class="activity">
               <div class="activity-name">
-                午餐時間<span class="badge badge-meal">用餐</span>
+                午餐：宮古島harry's Shrimp Truck - 必吃人氣蝦蝦飯<span class="badge badge-meal">用餐</span>
               </div>
-              <div class="activity-note">宮古島harry's Shrimp Truck - 必吃人氣蝦蝦飯</div>
+              <div class="activity-note">
+                地址：日本〒906-0002 Okinawa, Miyakojima, Hirara, Karimata−358-1 西平安名岬展望台前<br>     
+              </div>
             </div>
           </div>
 
@@ -331,6 +335,7 @@
                 宮古島海中公園<span class="badge badge-culture">觀光</span>
               </div>
               <div class="activity-note">
+                地址：Karimata-2511-1 Hirara, Miyakojima, Okinawa 906-0002日本<br>
                 海底觀察館，涼爽舒適，慢慢欣賞海底世界
                 <p>成人門票：&yen;1000 </p>
               </div>
@@ -344,6 +349,7 @@
                 島の駅みやこ / Blue Seal冰淇淋<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
+                地址：Kugai-870-1 Hirara, Miyakojima, Okinawa 906-0015日本 / Kugai-654-23 Hirara, Miyakojima, Okinawa 906-0015日本<br>
                 物產中心，選購特產，有休息區可喝茶
               </div>
             </div>
@@ -353,7 +359,10 @@
             <div class="time">15:30-16:30</div>
             <div class="activity">
               <div class="activity-name">返回港口(平良港)</div>
-              <div class="activity-note">預留充足時間登船（包車7小時結束）</div>
+              <div class="activity-note">
+                地址：沖繩縣宮古島市平良字下里108-11（平良港）<br>
+                預留充足時間登船（包車7小時結束）
+              </div>
             </div>
           </div>
 
@@ -403,7 +412,10 @@
             <div class="time">10:00-10:30</div>
             <div class="activity">
               <div class="activity-name">港口(安謝新港)集合出發</div>
-              <div class="activity-note">前往玉泉洞，車程約30分鐘</div>
+              <div class="activity-note">
+                地址：沖繩縣那霸市港町1-16-10（安謝新港）<br>
+                前往玉泉洞，車程約30分鐘
+              </div>
             </div>
           </div>
 
@@ -414,7 +426,9 @@
                 玉泉洞王國村<span class="badge badge-nature">自然</span>
               </div>
               <div class="activity-note">
-                日本第二長鐘乳石洞、琉球王國村、毒蛇博物館
+                地址：〒901-0616　沖縄県南城市玉城字前川1336番地<br>
+                日本第二長鐘乳石洞、琉球王國村、毒蛇博物館<br>
+                🌐 官網：<a href="https://www.gyokusendo.co.jp/okinawaworld/" target="_blank" style="color: #667eea; text-decoration: underline">https://www.gyokusendo.co.jp/okinawaworld/</a>
               </div>
             </div>
           </div>
@@ -425,57 +439,43 @@
               <div class="activity-name">
                 國際通午餐<span class="badge badge-meal">用餐</span>
               </div>
-              <div class="activity-note">返回市區，牧志公設市場或當地餐廳</div>
+              <div class="activity-note">
+                地址：3 Chome-2-10 Makishi, Naha, Okinawa 900-0013日本<br>
+                返回市區，牧志公設市場或當地餐廳
+              </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">14:00-16:00</div>
+            <div class="time">14:00-17:00</div>
             <div class="activity">
               <div class="activity-name">
                 國際通購物<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
-                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃
+                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃，充裕時間自由購物休息
               </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">16:00-16:20</div>
-            <div class="activity">
-              <div class="activity-name">前往瀨長島</div>
-              <div class="activity-note">車程約20分鐘</div>
-            </div>
-          </div>
-
-          <div class="time-slot">
-            <div class="time">16:20-17:30</div>
-            <div class="activity">
-              <div class="activity-name">
-                瀨長島Umikaji Terrace<span class="badge badge-nature"
-                  >自然</span
-                >
-              </div>
-              <div class="activity-note">白色地中海風建築，欣賞夕陽美景</div>
-            </div>
-          </div>
-
-          <div class="time-slot">
-            <div class="time">17:30-18:00</div>
+            <div class="time">17:00-17:30</div>
             <div class="activity">
               <div class="activity-name">返回港口(安謝新港)</div>
-              <div class="activity-note">車程約15分鐘，預留充足時間登船</div>
+              <div class="activity-note">
+                地址：沖繩縣那霸市港町1-16-10（安謝新港）<br>
+                車程約15分鐘，預留充足時間登船
+              </div>
             </div>
           </div>
 
           <div class="stats">
             <div class="stat-item">
-              <div class="stat-value">3</div>
+              <div class="stat-value">2</div>
               <div class="stat-label">主要景點</div>
             </div>
             <div class="stat-item">
-              <div class="stat-value">8小時</div>
+              <div class="stat-value">7.5小時</div>
               <div class="stat-label">遊覽時間</div>
             </div>
             <div class="stat-item">
@@ -516,7 +516,10 @@
             <div class="time">11:00-11:30</div>
             <div class="activity">
               <div class="activity-name">港口(石垣新港)出發</div>
-              <div class="activity-note">前往川平灣，車程約30分鐘</div>
+              <div class="activity-note">
+                地址：沖繩縣石垣市新川2468-1（石垣港離島碼頭）<br>
+                前往川平灣，車程約30分鐘
+              </div>
             </div>
           </div>
 
@@ -527,6 +530,7 @@
                 川平灣玻璃船體驗<span class="badge badge-nature">自然</span>
               </div>
               <div class="activity-note">
+                地址：912-1 Kabira, Ishigaki, Okinawa 907-0453日本<br>
                 米其林三星景點，搭乘玻璃船欣賞海底珊瑚礁與熱帶魚群（玻璃船票 15人 x &yen;1,200 = &yen;18,000）
               </div>
             </div>
@@ -536,63 +540,46 @@
             <div class="time">13:00-14:30</div>
             <div class="activity">
               <div class="activity-name">
-                川平灣午餐 - 石垣牛燒肉<span class="badge badge-meal">用餐</span>
+                午餐 - 炭火燒肉山本<span class="badge badge-meal">用餐</span>
               </div>
               <div class="activity-note">
-                <strong>推薦餐廳選擇：</strong><br>
-                1. <strong>石垣屋</strong> (11:30-14:00) - 必嚐招牌特選牛肉握壽司、自家牧場直營<br>
-                2. <strong>燒肉專家 いしなぎ屋</strong> (11:30-15:30) - 牧場直營、午餐套餐CP值高<br>
-                3. <strong>石垣島北內牧場</strong> (11:30-14:30) - 整頭購買提供稀少部位<br>
-                預算：午餐約¥2,000-3,500/人
+                地址：2 Chome-5-18 Hamasakicho, Ishigaki, Okinawa 907-0013日本<br>
+                石垣牛燒肉專門店，品質優良
               </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">14:30-15:00</div>
-            <div class="activity">
-              <div class="activity-name">前往八重山民俗村</div>
-              <div class="activity-note">車程約10分鐘，順路返回市區</div>
-            </div>
-          </div>
-
-          <div class="time-slot">
-            <div class="time">15:00-16:00</div>
+            <div class="time">14:30-17:00</div>
             <div class="activity">
               <div class="activity-name">
-                石垣八重山民俗村<span class="badge badge-culture">文化</span>
+                石垣市公設市場<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
-                百年古民家、松鼠猴園、傳統文化體驗（門票 15人 x &yen;1,000 = &yen;15,000）
+                地址：208 Okawa, Ishigaki, Okinawa 907-0022日本<br>
+                石垣市公設市場、伴手禮店、特產中心，充裕時間購物休息
               </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">16:00-17:30</div>
-            <div class="activity">
-              <div class="activity-name">
-                EUGLENA MALL<span class="badge badge-shopping">購物</span>
-              </div>
-              <div class="activity-note">最後購物機會，有冷氣座椅可休息</div>
-            </div>
-          </div>
-
-          <div class="time-slot">
-            <div class="time">17:30-18:00</div>
+            <div class="time">17:00-17:30</div>
             <div class="activity">
               <div class="activity-name">返回港口(石垣新港)</div>
-              <div class="activity-note">預留充足時間登船（包車7小時結束）</div>
+              <div class="activity-note">
+                地址：沖繩縣石垣市新川2468-1（石垣港離島碼頭）<br>
+                預留充足時間登船（包車6.5小時結束）
+              </div>
             </div>
           </div>
 
           <div class="stats">
             <div class="stat-item">
-              <div class="stat-value">3</div>
+              <div class="stat-value">2</div>
               <div class="stat-label">主要景點</div>
             </div>
             <div class="stat-item">
-              <div class="stat-value">7小時</div>
+              <div class="stat-value">6.5小時</div>
               <div class="stat-label">遊覽時間</div>
             </div>
             <div class="stat-item">
@@ -626,14 +613,13 @@
             <li><strong>門票費用：</strong></li>
             <li style="margin-left: 30px">- 玉泉洞王國村：2,000円</li>
             <li style="margin-left: 30px">- 川平灣玻璃船：1,200円</li>
-            <li style="margin-left: 30px">- 八重山民俗村：1,000円</li>
             <li style="margin-left: 30px">- 其他景點：多數免費</li>
             <li><strong>餐費預算：</strong></li>
             <li style="margin-left: 30px">- 午餐：1,500-2,500円/餐</li>
             <li style="margin-left: 30px">- 飲料點心：500-1,000円/天</li>
             <li><strong>購物伴手禮：</strong>5,000-10,000円(依個人需求)</li>
             <li>
-              <strong>建議總預算：</strong>20,000-27,000円(約台幣6,000-8,100元)
+              <strong>建議總預算：</strong>18,000-25,000円(約台幣5,400-7,500元)
             </li>
           </ul>
 
@@ -642,40 +628,20 @@
             <li><strong>天氣因素：</strong></li>
             <li style="margin-left: 30px">- 雨天：玉泉洞為室內景點不受影響</li>
             <li style="margin-left: 30px">- 川平灣雨天改為石垣市區購物或石垣島鐘乳洞</li>
-            <li style="margin-left: 30px">- 瀨長島可改為ASHIBINAA Outlet</li>
+            <li style="margin-left: 30px">- 各島購物中心均有冷氣休息區</li>
             <li><strong>時間調整：</strong></li>
-            <li style="margin-left: 30px">- 可依團員體力縮短購物時間</li>
+            <li style="margin-left: 30px">- 可依團員體力彈性調整購物時間</li>
             <li style="margin-left: 30px">- 景點停留時間可彈性調整</li>
-            <li style="margin-left: 30px">- 確保17:30前返回港口</li>
+            <li style="margin-left: 30px">- 確保17:00-17:30前返回港口</li>
           </ul>
 
-          <h3 style="color: #667eea; margin-top: 20px">✨ 石垣島行程更新重點</h3>
+          <h3 style="color: #667eea; margin-top: 20px">✨ 行程特色與說明</h3>
           <ul style="line-height: 2; margin-left: 20px">
             <li><strong>川平灣玻璃船：</strong>15人確定搭乘玻璃船，欣賞海底世界</li>
-            <li><strong>川平灣午餐 - 石垣牛燒肉推薦：</strong>
+            <li><strong>炭火燒肉山本：</strong>
               <ul style="margin-top: 5px">
-                <li style="margin-left: 30px"><strong>石垣屋</strong>（最推薦！）<br>
-                  地址：沖縄県石垣市真栄里547-7<br>
-                  電話：0980-82-4400<br>
-                  營業：11:30-14:00（週二休）<br>
-                  特色：300年吉野杉古民家、自家牧場直營、招牌特選牛肉握壽司</li>
-                <li style="margin-left: 30px"><strong>燒肉專家 いしなぎ屋</strong><br>
-                  地址：沖縄県石垣市大川48<br>
-                  電話：0980-83-9929<br>
-                  營業：11:30-15:30<br>
-                  特色：牧場直營、午餐套餐超值</li>
-                <li style="margin-left: 30px"><strong>石垣島北內牧場 濱崎本店</strong><br>
-                  地址：沖縄県石垣市浜崎町2-3-24<br>
-                  電話：0980-83-7000<br>
-                  營業：11:30-14:30<br>
-                  特色：整頭購買、可品嚐稀少部位</li>
-              </ul>
-            </li>
-            <li><strong>八重山民俗村：</strong>取代桃林寺，位於川平灣回市區順路上
-              <ul style="margin-top: 5px">
-                <li style="margin-left: 30px">- 百年古民家重現石垣島傳統生活</li>
-                <li style="margin-left: 30px">- 可愛松鼠猴園</li>
-                <li style="margin-left: 30px">- 有遮陽處和休息區，適合團體</li>
+                <li style="margin-left: 30px">地址：沖繩縣石垣市濱崎町2-5-18</li>
+                <li style="margin-left: 30px">石垣牛燒肉專門店，品質優良</li>
               </ul>
             </li>
             <li><strong>EUGLENA MALL 說明：</strong>
