add google maps links

--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
               </div>
               <div class="activity-note">
                 地址：沖繩縣宮古島市下地字與那霸1199<br>
-                東洋第一美海灘，輕鬆散步或涼亭休息
+                東洋第一美海灘，輕鬆散步或涼亭休息<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/tq9ZVCQDxPdjY3SKA" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -323,7 +324,8 @@
                 午餐：宮古島harry's Shrimp Truck - 必吃人氣蝦蝦飯<span class="badge badge-meal">用餐</span>
               </div>
               <div class="activity-note">
-                地址：日本〒906-0002 Okinawa, Miyakojima, Hirara, Karimata−358-1 西平安名岬展望台前<br>     
+                地址：日本〒906-0002 Okinawa, Miyakojima, Hirara, Karimata−358-1 西平安名岬展望台前<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/NdVdhDDyFnLo1FtW7" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -336,8 +338,9 @@
               </div>
               <div class="activity-note">
                 地址：Karimata-2511-1 Hirara, Miyakojima, Okinawa 906-0002日本<br>
-                海底觀察館，涼爽舒適，慢慢欣賞海底世界
-                <p>成人門票：&yen;1000 </p>
+                海底觀察館，涼爽舒適，慢慢欣賞海底世界<br>
+                成人門票：&yen;1000<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/EURfLxy8eSRw8maF8" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -349,8 +352,9 @@
                 島の駅みやこ / Blue Seal冰淇淋<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
-                地址：Kugai-870-1 Hirara, Miyakojima, Okinawa 906-0015日本 / Kugai-654-23 Hirara, Miyakojima, Okinawa 906-0015日本<br>
-                物產中心，選購特產，有休息區可喝茶
+                物產中心，選購特產，有休息區可喝茶<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/Y8A2MJeQ6LNpfSuNA" target="_blank" style="color: #667eea; text-decoration: underline">島の駅みやこ</a>
+                📍 地圖：<a href="https://maps.app.goo.gl/dggmsk6Xw8WMwbEH7" target="_blank" style="color: #667eea; text-decoration: underline">Blue Seal冰淇淋</a>
               </div>
             </div>
           </div>
@@ -428,7 +432,8 @@
               <div class="activity-note">
                 地址：〒901-0616　沖縄県南城市玉城字前川1336番地<br>
                 日本第二長鐘乳石洞、琉球王國村、毒蛇博物館<br>
-                🌐 官網：<a href="https://www.gyokusendo.co.jp/okinawaworld/" target="_blank" style="color: #667eea; text-decoration: underline">https://www.gyokusendo.co.jp/okinawaworld/</a>
+                🌐 官網：<a href="https://www.gyokusendo.co.jp/okinawaworld/" target="_blank" style="color: #667eea; text-decoration: underline">https://www.gyokusendo.co.jp/okinawaworld/</a><br>
+                📍 地圖：<a href="https://maps.app.goo.gl/dG8Q7ft4qajLwqmK7" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -441,7 +446,8 @@
               </div>
               <div class="activity-note">
                 地址：3 Chome-2-10 Makishi, Naha, Okinawa 900-0013日本<br>
-                返回市區，牧志公設市場或當地餐廳
+                返回市區，牧志公設市場或當地餐廳<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/7cgSz1ohHrdeMz3w6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -453,7 +459,7 @@
                 國際通購物<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
-                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃，充裕時間自由購物休息
+                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃，充裕時間自由購物休息<br>
               </div>
             </div>
           </div>
@@ -531,7 +537,8 @@
               </div>
               <div class="activity-note">
                 地址：912-1 Kabira, Ishigaki, Okinawa 907-0453日本<br>
-                米其林三星景點，搭乘玻璃船欣賞海底珊瑚礁與熱帶魚群（玻璃船票 15人 x &yen;1,200 = &yen;18,000）
+                米其林三星景點，搭乘玻璃船欣賞海底珊瑚礁與熱帶魚群（玻璃船票 15人 x &yen;1,200 = &yen;18,000）<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/urhYQBNof4UUj61GA" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -544,7 +551,8 @@
               </div>
               <div class="activity-note">
                 地址：2 Chome-5-18 Hamasakicho, Ishigaki, Okinawa 907-0013日本<br>
-                石垣牛燒肉專門店，品質優良
+                石垣牛燒肉專門店，品質優良<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/8PkKYC8NpH8gMFJP6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -557,7 +565,8 @@
               </div>
               <div class="activity-note">
                 地址：208 Okawa, Ishigaki, Okinawa 907-0022日本<br>
-                石垣市公設市場、伴手禮店、特產中心，充裕時間購物休息
+                石垣市公設市場、伴手禮店、特產中心，充裕時間購物休息<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/yiwDfE34LjJ86zNx8" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
