--- a/index.html
+++ b/index.html
@@ -224,9 +224,21 @@
           padding: 10px 20px;
         }
 
+        .time-slot {
+          flex-direction: column;
+          align-items: flex-start;
+        }
+
         .time {
-          min-width: 100px;
-          font-size: 14px;
+          min-width: 100%;
+          font-size: 16px;
+          margin-bottom: 10px;
+          padding-bottom: 10px;
+          border-bottom: 2px solid #667eea;
+        }
+
+        .activity {
+          width: 100%;
         }
       }
     </style>
