add port google map links

--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@
             <div class="activity">
               <div class="activity-name">港口(平良港)集合出發</div>
               <div class="activity-note">
-                地址：沖繩縣宮古島市平良字下里108-11（平良港）<br>
-                兩台車同時出發，前往與那霸前濱海灘
+                地址：Nishinakasone-2 Hirara, Miyakojima, Okinawa 906-0006日本（平良港）<br>
+                兩台車同時出發，前往與那霸前濱海灘<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/NmwF8EN88XnoJ4CN6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -376,8 +377,9 @@
             <div class="activity">
               <div class="activity-name">返回港口(平良港)</div>
               <div class="activity-note">
-                地址：沖繩縣宮古島市平良字下里108-11（平良港）<br>
-                預留充足時間登船（包車7小時結束）
+                地址：Nishinakasone-2 Hirara, Miyakojima, Okinawa 906-0006日本（平良港）<br>
+                預留充足時間登船（包車7小時結束）<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/NmwF8EN88XnoJ4CN6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -429,8 +431,9 @@
             <div class="activity">
               <div class="activity-name">港口(安謝新港)集合出發</div>
               <div class="activity-note">
-                地址：沖繩縣那霸市港町1-16-10（安謝新港）<br>
-                前往玉泉洞，車程約30分鐘
+                地址：4 Chome 4 Minato-machi, Naha-shi, 900-0001（安謝新港）<br>
+                前往玉泉洞，車程約30分鐘<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/Qc2uscT2wmFKrimi6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -481,8 +484,9 @@
             <div class="activity">
               <div class="activity-name">返回港口(安謝新港)</div>
               <div class="activity-note">
-                地址：沖繩縣那霸市港町1-16-10（安謝新港）<br>
-                車程約15分鐘，預留充足時間登船
+                地址：4 Chome 4 Minato-machi, Naha-shi, 900-0001（安謝新港）<br>
+                車程約15分鐘，預留充足時間登船<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/Qc2uscT2wmFKrimi6" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -535,8 +539,9 @@
             <div class="activity">
               <div class="activity-name">港口(石垣新港)出發</div>
               <div class="activity-note">
-                地址：沖繩縣石垣市新川2468-1（石垣港離島碼頭）<br>
-                前往川平灣，車程約30分鐘
+                地址：Painuhamacho, Ishigaki, Okinawa 907-0000日本<br>
+                前往川平灣，車程約30分鐘<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/bBVgT6QnEcg1Ypv7A" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
@@ -588,8 +593,9 @@
             <div class="activity">
               <div class="activity-name">返回港口(石垣新港)</div>
               <div class="activity-note">
-                地址：沖繩縣石垣市新川2468-1（石垣港離島碼頭）<br>
-                預留充足時間登船（包車6.5小時結束）
+                地址：Painuhamacho, Ishigaki, Okinawa 907-0000日本<br>
+                預留充足時間登船（包車6.5小時結束）<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/bBVgT6QnEcg1Ypv7A" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
