okinawa add attractions

--- a/index.html
+++ b/index.html
@@ -468,19 +468,31 @@
           </div>
 
           <div class="time-slot">
-            <div class="time">14:00-17:00</div>
+            <div class="time">14:00-16:00</div>
             <div class="activity">
               <div class="activity-name">
                 國際通購物<span class="badge badge-shopping">購物</span>
               </div>
               <div class="activity-note">
-                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃，充裕時間自由購物休息<br>
+                御菓子御殿、鹽屋、唐吉訶德、琉球玻璃，自由購物休息<br>
+              </div>
+            </div>
+          </div>
+          <div class="time-slot">
+            <div class="time">16:00-17:30</div>
+            <div class="activity">
+              <div class="activity-name">
+                沖繩媳婦伴手禮店<span class="badge badge-shopping">購物</span>
+              </div>
+              <div class="activity-note">
+                台灣人經營的人氣伴手禮店，中文溝通無障礙<br>
+                📍 地圖：<a href="https://maps.app.goo.gl/udtNLT8UiqjiBbkZ7" target="_blank" style="color: #667eea; text-decoration: underline">Google Maps</a>
               </div>
             </div>
           </div>
 
           <div class="time-slot">
-            <div class="time">17:00-17:30</div>
+            <div class="time">17:30-18:00</div>
             <div class="activity">
               <div class="activity-name">返回港口(安謝新港)</div>
               <div class="activity-note">
@@ -493,11 +505,11 @@
 
           <div class="stats">
             <div class="stat-item">
-              <div class="stat-value">2</div>
+              <div class="stat-value">3</div>
               <div class="stat-label">主要景點</div>
             </div>
             <div class="stat-item">
-              <div class="stat-value">7.5小時</div>
+              <div class="stat-value">8小時</div>
               <div class="stat-label">遊覽時間</div>
             </div>
             <div class="stat-item">
